tests/__snapshots__/validation-configFile-syntax-errors-unquoted-values.snap.txt
Error: Value for the 'target' option must be a string.

  1 | {
  2 |     target: *,
    |             ~
  3 |     testFileMatch: [**/*.tst.*]
  4 |   }
  5 | 

      at ./tstyche.json:2:13

Error: Item of the 'testFileMatch' list must be of type string.

  1 | {
  2 |     target: *,
  3 |     testFileMatch: [**/*.tst.*]
    |                     ~~~~~~~~~~
  4 |   }
  5 | 
  6 | 

      at ./tstyche.json:3:21

